--- a/view/about.html
+++ b/view/about.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html>
+<html>	
 	<head>
 		<title>PollEndpoint - About</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="google-translate-customization" content="77fe593d432fcb9f-a556272c9dd07368-g8054283e1127bbec-1f"></meta>
 		<link type="text/css" href="assets/css/bootstrap.min.css" rel="stylesheet">
 		<link type="text/css" href="assets/css/bootstrap-responsive.min.css" rel="stylesheet">
 		<style type="text/css">
@@ -27,7 +28,7 @@
 			text-align: center;
 		}
 		.jumbotron h1 {
-			font-size: 72px;
+			font-size: 60px;
 			line-height: 1;
 		}
 		.jumbotron .btn {
@@ -52,10 +53,17 @@
 				<ul class="nav nav-pills pull-right">
 					<li><a href="/">Home</a></li>
 					<li><a href="/about">About</a></li>
-					<li><a href="mailto:licson0729@gmail.com">Contact</a></li>
+					<li class="dropdown">
+						<a href="mailto:licson0729@gmail.com" data-toggle="dropdown">Contact</a>
+						<ul class="dropdown-menu">
+							<li><a href="https://www.facebook.com/pages/Pollendpoint/487395521320925">Facebook page</a></li>
+							<li><a href="https://github.com/licson0729/PollEndpoint">Github repo</a></li>
+							<li><a href="mailto:licson0729@gmail.com?subject=PollEndpoint%20enquiries">Contact me</a></li>
+						</ul>
+					</li>
 				</ul>
-			<h3 class="muted">PollEndpoint</h3>
-		</div>
+				<h3 class="muted">PollEndpoint</h3>
+			</div>
 		<hr>
 		<div class="jumbotron">
 			<h1>PollEndpoint</h1>
@@ -69,8 +77,8 @@
 			<p>Before the creation of PollEndpoint, I have done some online surverys and found most of them not easy to use and hardcoded.</p>
 			<p>Therefore, I want to create a survey service that is easy to use and manange. PollEndpoint is the final product that I've made.</p>
 			<h4>Support & Ideas</h4>
-			<p>Currently we don't have a medium to collect ideas and user support. However, if you have any problems while using PollEndpoint, feel free to email me <a href="mailto:licson0729@gmail.com">(licson0729@gmail.com)</a>.</p>
-			<p>If you found problems with my code or want to suggest new features, you can also submit an issue on <a href="https://github.com/licson0729/PollEndpoint">GitHub</a>.</p>
+			<p>Currently we have a <a href="https://www.facebook.com/pages/Pollendpoint/487395521320925">facebook page</a> to collect ideas and user support. If you have any problems while using PollEndpoint, feel free to email me <a href="mailto:licson0729@gmail.com">(licson0729@gmail.com)</a>.</p>
+			<p>If you found problems with my code or want to suggest new features, you can also submit an issue on <a href="https://github.com/licson0729/PollEndpoint">GitHub</a> or you can post to our facebook page.</p>
 			<h4>PollEndpoint is open-source</h4>
 			<p>I think I forget to tell you something. PollEndpoint is open-source. If you're interested about how I wrote this, you can have a look at the repository on <a href="https://github.com/licson0729/PollEndpoint">GitHub</a></p>
 		</div>
@@ -78,6 +86,13 @@
 		<div class="footer">
 			<p>&copy; PollEndpoint <%= '2013 - ' + (new Date).getFullYear() == 2013 ? '' : (new Date).getFullYear() %></p>
 		</div>
+		<div id="google_translate_element"></div>
+		<script type="text/javascript">
+		function googleTranslateElementInit(){
+			new google.translate.TranslateElement({pageLanguage: 'en', multilanguagePage: true, gaTrack: true, gaId: 'UA-39218046-1'}, 'google_translate_element');
+		}
+		</script>
+		<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 		<script type="text/javascript">
 		var _gaq = _gaq || [];
 		_gaq.push(['_setAccount', 'UA-39218046-1']);
