--- a/view/error.html
+++ b/view/error.html
@@ -4,8 +4,9 @@
 		<title>Error</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link type="text/css" href="assets/css/bootstrap.min.css" rel="stylesheet">
-		<link type="text/css" href="assets/css/bootstrap-responsive.min.css" rel="stylesheet">
+		<base href="https://pollendpoint-licson.rhcloud.com/">
+		<link type="text/css" href="/assets/css/bootstrap.min.css" rel="stylesheet">
+		<link type="text/css" href="/assets/css/bootstrap-responsive.min.css" rel="stylesheet">
 		<style type="text/css">
 		body {
 			padding-top: 20px;
@@ -27,7 +28,7 @@
 			text-align: center;
 		}
 		.jumbotron h1 {
-			font-size: 72px;
+			font-size: 60px;
 			line-height: 1;
 		}
 		.jumbotron .btn {
@@ -43,8 +44,8 @@
 			margin-top: 28px;
 		}
 		</style>
-		<script type="text/javascript" src="assets/js/jquery-1.8.3.min.js"></script>
-		<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="/assets/js/jquery-1.8.3.min.js"></script>
+		<script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
 	</head>
 	<body>
 		<div class="container-narrow">
@@ -52,10 +53,17 @@
 				<ul class="nav nav-pills pull-right">
 					<li><a href="/">Home</a></li>
 					<li><a href="/about">About</a></li>
-					<li><a href="mailto:licson0729@gmail.com">Contact</a></li>
+					<li class="dropdown">
+						<a href="mailto:licson0729@gmail.com" data-toggle="dropdown">Contact</a>
+						<ul class="dropdown-menu">
+							<li><a href="https://www.facebook.com/pages/Pollendpoint/487395521320925">Facebook page</a></li>
+							<li><a href="https://github.com/licson0729/PollEndpoint">Github repo</a></li>
+							<li><a href="mailto:licson0729@gmail.com?subject=PollEndpoint%20enquiries">Contact me</a></li>
+						</ul>
+					</li>
 				</ul>
-			<h3 class="muted">PollEndpoint</h3>
-		</div>
+				<h3 class="muted">PollEndpoint</h3>
+			</div>
 		<hr>
 		<div class="jumbotron">
 			<h1>Oops.</h1>
