Updated to the latest version used on production.

--- a/view/about.html
+++ b/view/about.html
@@ -2,9 +2,24 @@
 <html>	
 	<head>
 		<title>PollEndpoint - About</title>
+		<!-- Site information -->
 		<meta charset="utf-8">
+		<meta name="Keywords" content="free,open-source,online questionnaire,online polls,platform,pollendpoint,high performance,easy to use, node.js,system,mobile compatible,responsive design,clean" />
+		<meta name="description" content="PollEndpoint is a free, open-source questionnaire platform created by Licson Lee that is easy to use and fast. It's also compatible with mobile browsers that makes your questionnaires available in more platforms." />
+		<meta name="author" content="Licson Lee" />
+		<meta name="application-name" content="PollEndpoint" />
+		<!-- Trackers -->
+		<meta name="google-translate-customization" content="77fe593d432fcb9f-a556272c9dd07368-g8054283e1127bbec-1f" />
+		<!-- For mobile phones -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="google-translate-customization" content="77fe593d432fcb9f-a556272c9dd07368-g8054283e1127bbec-1f"></meta>
+		<!-- Open Graph -->
+		<meta property="og:title" content="PollEndpoint - About" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://pollendpoint-licson.rhcloud.com/about" />
+		<meta property="og:image" content="https://pollendpoint-licson.rhcloud.com/assets/img/webimage.png" />
+		<meta property="og:site_name" content="PollEndpoint" />
+		<meta property="fb:admins" content="1098332345" />
+		
 		<link type="text/css" href="assets/css/bootstrap.min.css" rel="stylesheet">
 		<link type="text/css" href="assets/css/bootstrap-responsive.min.css" rel="stylesheet">
 		<style type="text/css">
@@ -40,9 +55,6 @@
 		.marketing {
 			margin: 60px 0;
 		}
-		.marketing p + h4 {
-			margin-top: 28px;
-		}
 		</style>
 		<script type="text/javascript" src="assets/js/jquery-1.8.3.min.js"></script>
 		<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
@@ -70,17 +82,29 @@
 			<p class="lead">About</p>
 		</div>
 		<hr>
-		<div class="marketing">
-			<h3>About us</h3>
-			<p>Hi! I'm the site's creator, Licson Lee. This site is for people to make polls, questionaires and surveys in no time.</p>
-			<h4>Motivation</h4>
-			<p>Before the creation of PollEndpoint, I have done some online surverys and found most of them not easy to use and hardcoded.</p>
-			<p>Therefore, I want to create a survey service that is easy to use and manange. PollEndpoint is the final product that I've made.</p>
-			<h4>Support & Ideas</h4>
-			<p>Currently we have a <a href="https://www.facebook.com/pages/Pollendpoint/487395521320925">facebook page</a> to collect ideas and user support. If you have any problems while using PollEndpoint, feel free to email me <a href="mailto:licson0729@gmail.com">(licson0729@gmail.com)</a>.</p>
-			<p>If you found problems with my code or want to suggest new features, you can also submit an issue on <a href="https://github.com/licson0729/PollEndpoint">GitHub</a> or you can post to our facebook page.</p>
-			<h4>PollEndpoint is open-source</h4>
-			<p>I think I forget to tell you something. PollEndpoint is open-source. If you're interested about how I wrote this, you can have a look at the repository on <a href="https://github.com/licson0729/PollEndpoint">GitHub</a></p>
+		<div class="marketing" itemscope itemtype="http://schema.org/AboutPage">
+			<div class="hero-unit">
+				<h1 itemprop="headline">It's for you to create questionnaires, surveys and polls in no time.</h1>
+				<p>Also, it's open-source! Go get the code at <a href="https://github.com/licson0729/PollEndpoint">GitHub</a>.</p>
+				<a href="/create" class="btn btn-success" itemprop="significantLink">Try it now!</a>
+			</div>
+			<div itemprop="mainContentOfPage">
+				<h3>About the creator</h3>
+				<p>Hi! I'm the site's creator, Licson Lee. I've been working on some other projects before but they're not so useful so I'm not talking them at here. If you want to know more about me, you can check out my <a href="http://serve-licson.net23.net/">personal website</a>.</p>
+				<p>I created PollEndpoint originally for my homework assignment because other online survey service doesn't match my requirements. So I made my own site for making online questionnaires and I found it pretty useful for others so I release it.</p>
+				<p>Hope you like it.</p>
+				
+				<h3>Motivation</h3>
+				<p>Before the creation of PollEndpoint, I have done some online surveys and found most of them not easy to use and hardcoded.</p>
+				<p>Therefore, I want to create a survey service that is easy to use and manange. PollEndpoint is the final product that I've made.</p>
+				
+				<h3>Support &amp; Ideas</h3>
+				<p>Currently we have a <a href="https://www.facebook.com/pages/Pollendpoint/487395521320925">facebook page</a> to collect ideas and user support. If you have any problems while using PollEndpoint, feel free to post at the page or email me <a href="mailto:licson0729@gmail.com">(licson0729@gmail.com)</a>.</p>
+				<p>If you found problems with my code or want to suggest new features, you can submit an issue on <a href="https://github.com/licson0729/PollEndpoint">GitHub</a> or you can post it to our facebook page.</p>
+				
+				<h3>PollEndpoint is open-source</h3>
+				<p>I think I forget to tell you something. PollEndpoint is open-source. If you're interested about how I wrote this, you can have a look at the repository on <a href="https://github.com/licson0729/PollEndpoint">GitHub</a></p>
+			</div>
 		</div>
 		<hr>
 		<div class="footer">
