--- a/view/index.html
+++ b/view/index.html
@@ -2,16 +2,26 @@
 <html>
 	<head>
 		<title>PollEndpoint</title>
+		<!-- Site information -->
 		<meta charset="utf-8">
+		<meta name="Keywords" content="free,open-source,online questionnaire,online polls,platform,pollendpoint,high performance,easy to use, node.js,system,mobile compatible,responsive design,clean" />
+		<meta name="description" content="PollEndpoint is a free, open-source questionnaire platform created by Licson Lee that is easy to use and fast. It's also compatible with mobile browsers that makes your questionnaires available in more platforms." />
+		<meta name="author" content="Licson Lee" />
+		<meta name="application-name" content="PollEndpoint" />
+		<!-- Trackers -->
 		<meta name="google-site-verification" content="7tZJPkxE94HA3d8m70Jukj68vU27sF0ITmwtVf_3jbA" />
-		<meta name="google-translate-customization" content="77fe593d432fcb9f-a556272c9dd07368-g8054283e1127bbec-1f"></meta>
+		<meta name="google-translate-customization" content="77fe593d432fcb9f-a556272c9dd07368-g8054283e1127bbec-1f" />
+		<meta name="msvalidate.01" content="6B39EBEDB520DC4C4679EBBADE7EB61D" />
+		<!-- For mobile phones -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- Open Graph -->
 		<meta property="og:title" content="PollEndpoint" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://pollendpoint-licson.rhcloud.com/" />
-		<meta property="og:image" content="" />
+		<meta property="og:image" content="https://pollendpoint-licson.rhcloud.com/assets/img/webimage.png" />
 		<meta property="og:site_name" content="PollEndpoint" />
 		<meta property="fb:admins" content="1098332345" />
+		
 		<link type="text/css" href="assets/css/bootstrap.min.css" rel="stylesheet">
 		<link type="text/css" href="assets/css/bootstrap-responsive.min.css" rel="stylesheet">
 		<style type="text/css">
@@ -72,9 +82,9 @@
 				<h3 class="muted">PollEndpoint</h3>
 			</div>
 			<hr>
-			<div class="jumbotron">
-				<h1>PollEndpoint</h1>
-				<p class="lead">High performance, open-source question platform by Licson Lee.</p>
+			<div class="jumbotron" itemscope itemtype="http://schema.org/WPHeader">
+				<h1 itemprop="name">PollEndpoint</h1>
+				<p class="lead" itemprop="description">High performance, open-source questionnaire platform by Licson Lee.</p>
 				<a class="btn btn-large btn-success" href="/create">Try it today!</a>
 			</div>
 			<hr>
