--- a/view/thanks.html
+++ b/view/thanks.html
@@ -2,9 +2,24 @@
 <html>
 	<head>
 		<title>PollEndpoint</title>
+		<!-- Site information -->
 		<meta charset="utf-8">
+		<meta name="Keywords" content="free,open-source,online questionnaire,online polls,platform,pollendpoint,high performance,easy to use, node.js,system,mobile compatible,responsive design,clean" />
+		<meta name="description" content="PollEndpoint is a free, open-source questionnaire platform created by Licson Lee that is easy to use and fast. It's also compatible with mobile browsers that makes your questionnaires available in more platforms." />
+		<meta name="author" content="Licson Lee" />
+		<meta name="application-name" content="PollEndpoint" />
+		<!-- Trackers -->
+		<meta name="google-translate-customization" content="77fe593d432fcb9f-a556272c9dd07368-g8054283e1127bbec-1f" />
+		<!-- For mobile phones -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="google-translate-customization" content="77fe593d432fcb9f-a556272c9dd07368-g8054283e1127bbec-1f"></meta>
+		<!-- Open Graph -->
+		<meta property="og:title" content="PollEndpoint" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://pollendpoint-licson.rhcloud.com/thanks" />
+		<meta property="og:image" content="https://pollendpoint-licson.rhcloud.com/assets/img/webimage.png" />
+		<meta property="og:site_name" content="PollEndpoint" />
+		<meta property="fb:admins" content="1098332345" />
+		
 		<link type="text/css" href="assets/css/bootstrap.min.css" rel="stylesheet">
 		<link type="text/css" href="assets/css/bootstrap-responsive.min.css" rel="stylesheet">
 		<style type="text/css">
